adds new descriptors, prepares gitian build for jenkins

--- a/src/qt/pivx.qrc
+++ b/src/qt/pivx.qrc
@@ -1,4 +1,4 @@
-<!DOCTYPE RCC><RCC version="1.0">
+<RCC>
     <qresource prefix="/icons">
         <file alias="bitcoin">res/icons/bitcoin.png</file>
         <file alias="bitcoin_testnet">res/icons/bitcoin_testnet.png</file>
